# flask-supabase

./: CLAUDE.md  pyproject.toml
flask_supabase/: __init__.py
